--- a/conf/docker.yaml
+++ b/conf/docker.yaml
@@ -23,7 +23,7 @@ auth:
 # a list of other known repositories we can talk to
 uplinks:
   npmjs:
-    url: https://registry.npmjs.org/
+    url: https://registry.npm.taobao.org/
 
 packages:
   '@*/*':
